{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 30,
  "lineage": "85c57f84-eb2b-40be-fabe-009d85d25c6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b1f4237bd816a1",
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:instance/i-04be2519f2366eba2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04be2519f2366eba2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "joc-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab1114258511d928",
            "private_dns": "ip-10-5-1-128.ap-southeast-1.compute.internal",
            "private_ip": "10.5.1.128",
            "public_dns": "ec2-18-141-229-116.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.229.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042cd5a1a85e9ae61",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0dbafa6771df9e2",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "mms-instance",
              "Owner": "mms"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "mms-instance",
              "Owner": "mms"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09ccfb1e4c805e5da"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:internet-gateway/igw-05a620506184725a3",
            "id": "igw-05a620506184725a3",
            "owner_id": "190916898543",
            "tags": {
              "Name": "mms-igw",
              "Owner": "mms"
            },
            "tags_all": {
              "Name": "mms-igw",
              "Owner": "mms"
            },
            "vpc_id": "vpc-0a4b8f92ac61cf106"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:route-table/rtb-0ff25ed2bd39f4f7e",
            "id": "rtb-0ff25ed2bd39f4f7e",
            "owner_id": "190916898543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a620506184725a3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mms-rt",
              "Owner": "mms"
            },
            "tags_all": {
              "Name": "mms-rt",
              "Owner": "mms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4b8f92ac61cf106"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2618e12753d3123",
            "route_table_id": "rtb-0ff25ed2bd39f4f7e",
            "subnet_id": "subnet-0e0dbafa6771df9e2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:security-group/sg-09ccfb1e4c805e5da",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ccfb1e4c805e5da",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.250.18.65/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mms-sg",
            "name_prefix": "",
            "owner_id": "190916898543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mms-sg",
              "Owner": "mms"
            },
            "tags_all": {
              "Name": "mms-sg",
              "Owner": "mms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4b8f92ac61cf106"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:subnet/subnet-0e0dbafa6771df9e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0dbafa6771df9e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190916898543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mms-subnet",
              "Owner": "mms"
            },
            "tags_all": {
              "Name": "mms-subnet",
              "Owner": "mms"
            },
            "vpc_id": "vpc-0a4b8f92ac61cf106"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190916898543:vpc/vpc-0a4b8f92ac61cf106",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0cb2bd7264e6a54a4",
            "default_route_table_id": "rtb-045c0beefcec1fd9b",
            "default_security_group_id": "sg-0c9ae5a860932798e",
            "dhcp_options_id": "dopt-07b76bc2844c0854f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a4b8f92ac61cf106",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045c0beefcec1fd9b",
            "owner_id": "190916898543",
            "tags": {
              "Name": "mms-vpc",
              "Owner": "mms"
            },
            "tags_all": {
              "Name": "mms-vpc",
              "Owner": "mms"
            }
          }
        }
      ]
    }
  ]
}